[gd_scene load_steps=3 format=3 uid="uid://bac6yxy3e7il8"]

[ext_resource type="Script" path="res://Main Menu/hub_menu.gd" id="1_tpf0c"]
[ext_resource type="FontFile" uid="uid://b1h3f7pjc7o6" path="res://Resources/Fonts/NESCyrillic.ttf" id="2_jih23"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tpf0c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.498039, 0.0941176, 1)

[node name="MainMenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -103.5
offset_right = 143.0
offset_bottom = 103.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Play" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_jih23")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Creatures" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_jih23")
theme_override_font_sizes/font_size = 30
text = "Creatures
"

[node name="Storage Box" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_jih23")
theme_override_font_sizes/font_size = 30
text = "storage box
"

[node name="Save & Quit" type="Button" parent="MainMenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_jih23")
theme_override_font_sizes/font_size = 30
text = "Save & Quit
"

[node name="TempGameLogo" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -207.0
offset_right = 110.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_jih23")
theme_override_font_sizes/normal_font_size = 55
text = "Hub Menu
"
fit_content = true
scroll_active = false

[connection signal="pressed" from="MainMenuContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenuContainer/Creatures" to="." method="_on_creatures_pressed"]
[connection signal="pressed" from="MainMenuContainer/Storage Box" to="." method="_on_storage_box_pressed"]
